--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   font_awesome_flutter: 10.1.0
   fl_chart: 0.55.0
   from_css_color: 2.0.0
-  google_fonts: 4.0.3
+  google_fonts: 
   intl: 0.18.0
   json_path:
   mime_type: 1.0.0
