--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   emoji_flag_converter: 1.1.0
   equatable: 2.0.5
   flutter_animate: 4.1.1+1
-  flutter_cache_manager: 3.3.0
+  flutter_cache_manager: 
   flutter_credit_card: 3.0.6
   flutter_plugin_android_lifecycle: 2.0.9
   flutter_staggered_grid_view: 0.6.2
