--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,7 @@ dependencies:
   smooth_page_indicator: 1.0.1
   sqflite: 2.2.6
   swipeable_card_stack: 0.0.5
-  timeago: 3.2.2
+  timeago: 
   table_calendar: 3.0.9
 
 
