--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   json_path:
   mime_type: 1.0.0
   page_transition: 2.0.4
-  percent_indicator: 4.2.2
+  percent_indicator: 
   rive:
   rive_common: 
   provider: 6.0.4
