--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   percent_indicator: 
   rive:
   rive_common: 
-  provider: 6.0.4
+  provider: 
   smooth_page_indicator: 1.0.1
   sqflite: 
   swipeable_card_stack: 0.0.5
